<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_menu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_upcoming" />

                <TextView
                    android:id="@+id/frag_movies_see_all_btn1"
                    android:onClick="seeAllMoviesButtons"
                    style="@style/see_all_button"
                    android:text="@string/menu_see_all" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_movies_recycler_upcoming"
                style="@style/recyclerviews_main_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_menu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_popular" />

                <TextView
                    android:id="@+id/frag_movies_see_all_btn2"
                    android:onClick="seeAllMoviesButtons"

                    style="@style/see_all_button"
                    android:text="@string/menu_see_all" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_movies_recycler_popular"
                style="@style/recyclerviews_main_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_menu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_top_rated" />

                <TextView
                    android:id="@+id/frag_movies_see_all_btn3"
                    android:onClick="seeAllMoviesButtons"

                    style="@style/see_all_button"
                    android:text="@string/menu_see_all" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_movies_recycler_top_rated"
                style="@style/recyclerviews_main_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_menu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_choose_genre" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_movies_recycler_genres"
                style="@style/recyclerviews_main_menu" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>