<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".view.moviedetails.MovieDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="170dp"
                    android:layout_height="250dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/movie_name"
                    style="@style/text_color_movie_details"
                    android:layout_width="150dp"
                    android:gravity="center_vertical"
                    android:layout_height="90dp"
                    android:layout_toEndOf="@+id/movie_poster"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/movie_star_favorites_border"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <ImageView
                    android:id="@+id/movie_star_favorites_solid"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:src="@drawable/ic_baseline_star_24" />

                <LinearLayout
                    android:id="@+id/layout_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="100dp"
                    android:layout_toEndOf="@id/movie_poster">

                    <LinearLayout
                        android:id="@+id/layout_titles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondary_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sec_title_release_date" />

                        <TextView
                            android:id="@+id/movie_release_date"
                            style="@style/text_color_movie_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondary_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sec_title_rating" />

                        <TextView
                            android:id="@+id/movie_rating"
                            style="@style/text_color_movie_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_result"
                    android:layout_toEndOf="@id/movie_poster"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/budget_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondary_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_budget" />

                        <TextView
                            android:id="@+id/movie_budget"
                            style="@style/text_color_movie_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondary_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_genre" />

                        <TextView
                            android:id="@+id/movie_genre"
                            style="@style/text_color_movie_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E91E63"
                    android:text="@string/button_watch_trailer"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_overview_title"
                    style="@style/text_color_movie_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_overview"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_overview"
                    style="@style/text_color_movie_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_color_movie_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/similar_movies"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_recycler_similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>